# AIProof

./: .gitignore  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  create_admin.py  db.py  deps.py  main.py  seed.py
backend/app/core/: security.py
backend/app/models/: __init__.py  admin.py  assessment.py  base.py  conversation.py  enums.py  knowledge.py  membership.py  payment.py  rules.py  training.py  user.py
backend/app/routers/: admin.py  auth.py  health.py
backend/app/schemas/: auth.py  health.py  membership.py  payment.py  user.py
backend/app/services/: __init__.py  auth.py
backend/migrations/: env.py
backend/migrations/versions/: 54db183c134c_identity_and_membership_tables.py  af6df0caea16_agent_and_training_tables.py
backend/tests/: conftest.py  test_agent_models.py  test_auth.py  test_health.py  test_models.py
frontend/: README.md
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/admin/: AdminGuard.tsx  BackendStatus.tsx  layout.tsx  page.tsx
frontend/src/app/admin/agent-runs/: page.tsx
frontend/src/app/admin/customers/: page.tsx
frontend/src/app/admin/knowledge/: page.tsx
frontend/src/app/admin/prompts/: page.tsx
frontend/src/app/admin/quality-feedback/: page.tsx
frontend/src/app/admin/risk-safety/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: AuthProvider.tsx  SiteHeader.tsx
frontend/src/components/admin/: AdminShell.tsx  SectionPlaceholder.tsx  sections.ts
frontend/src/lib/: api.ts  auth.ts
(+4 files in other folders)
